# ISBE

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.override.yml  docker-compose.server.yml  docker-compose.yml  pyproject.toml  topics.yaml.example
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 001_common_facts.py  002_nowcasting.py  003_nvda.py
docs/superpowers/: PROGRESS.md
docs/superpowers/plans/: 2026-05-06-p0-evaluation-and-skeleton.md  2026-05-07-p1-nowcasting-mvp.md  2026-05-07-p1.5-make-it-live.md  2026-05-07-p1.6-worker-service.md  2026-05-10-p2-nvda-mvp.md
docs/superpowers/specs/: 2026-05-06-self-growing-info-system-design.md  2026-05-07-p1-sample-topics-design.md
infra/homepage/: bookmarks.yaml  docker.yaml  services.yaml  settings.yaml  widgets.yaml
memory/me/: MEMORY.md
memory/me/feedback/: finance_digest_style.md  research_digest_style.md
memory/me/reference/: nvda_event_calendar.md
memory/me/topics/: nowcasting.md  nowcasting.theses.md  nvda.md  nvda.theses.md
memory/me/user/: research_focus.md
scripts/: deploy-server.sh  export-images.ps1  verify_langfuse.sh  verify_phoenix.sh
src/isbe/: config.py  scheduler.py
src/isbe/artifacts/: store.py
src/isbe/cli/: main.py  memory_cmd.py  review.py  scheduler_cmd.py  topics_cmd.py
src/isbe/facts/: artifacts.py  db.py
src/isbe/llm/: client.py  finance_prompts.py  prompts.py
src/isbe/memory/: lifecycle.py  lint.py  loader.py  models.py  pending.py
src/isbe/observability/: runs.py
src/isbe/topics/: base.py  registry.py
src/isbe/topics/_shared/: __init__.py  arxiv.py  digester.py  digester_utils.py
src/isbe/topics/_shared/templates/: weekly.j2
src/isbe/topics/image-restoration/: topic.yaml
src/isbe/topics/nowcasting/: digester.py  facts.py  topic.yaml
src/isbe/topics/nowcasting/collectors/: arxiv.py  github.py
src/isbe/topics/nowcasting/templates/: weekly.j2
src/isbe/topics/nvda/: digester.py  facts.py  topic.yaml
src/isbe/topics/nvda/collectors/: news.py  prices.py  sec.py
src/isbe/topics/nvda/templates/: daily.j2
src/isbe/topics/video-generation/: topic.yaml
src/isbe/workflows/: hello_world.py
tests/: conftest.py  test_artifacts_store.py  test_cli_memory_cmd.py  test_cli_review.py  test_cli_topics_cmd.py  test_config.py  test_facts_db.py  test_hello_world_flow.py  test_llm_client.py  test_memory_lifecycle.py  test_memory_lint.py  test_memory_loader.py  test_memory_models.py  test_memory_pending.py  test_nowcasting_arxiv_collector.py  test_nowcasting_digester.py  test_nowcasting_facts.py  test_nowcasting_github_collector.py  test_nvda_digester.py  test_nvda_facts.py  test_nvda_news_collector.py  test_nvda_prices_collector.py  test_nvda_sec_collector.py  test_observability_runs.py  test_topics_base.py  test_topics_registry.py
