[project]
name = "isbe"
version = "0.0.1"
description = "Information System with Backbone of Evolution"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "prefect>=3.0",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "minio>=7.2",
    "anthropic>=0.40",
    "arize-phoenix-otel>=0.6",
    "openinference-semantic-conventions>=0.1",
    "jinja2>=3.1",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "bandit>=1.7",
]

[project.scripts]
radar = "isbe.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/isbe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: requires running infrastructure (postgres/minio/etc)"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# UP042: keep `str, Enum` mixin for Pydantic V2 enum serialization compat (StrEnum behaves differently)
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
# Integration tests place pytest.mark.integration before from-imports intentionally
"tests/test_facts_db.py" = ["E402"]
"tests/test_nowcasting_facts.py" = ["E402"]
